setting the register and login with firebase

--- a/src/components/footer/Footer.module.sass
+++ b/src/components/footer/Footer.module.sass
@@ -3,7 +3,7 @@
 .footer
     height: 100px
     background-color: styles.$darkblue
-    color: styles.$orange
+    color: styles.$gray
     font-size: 1.1rem
     position: fixed
     bottom: 0
