--- a/src/pages/login/Login.module.sass
+++ b/src/pages/login/Login.module.sass
@@ -15,6 +15,7 @@
         margin: auto 
         background: styles.$darkblue
         border-radius: 5px
+        padding-bottom: 50px
         @media screen and (max-width: 400px) 
             height: 100%
 
@@ -31,26 +32,24 @@
             align-items: center
             //background: styles.$darkblue
 
-            label
-                align-self: start
-                margin-top: 30px
-                color: styles.$white
             
             input
                 width: 100%
-                height: 30px
+                height: 40px
                 font-size: 1.4rem
                 color: styles.$darkblue
                 background: styles.$white
                 border-radius: 5px
                 border: 2px solid styles.$darkblue
                 padding-left: 5px
+                margin-top: 10px
 
             button
-                margin-top: 30px
+                margin-top: 10px
                 background: styles.$orange
                 color: styles.$white
                 width: 100%
+                height: 40px
                 border: 3px solid transparent
                 border-radius: 5px
                 font-size: 1.4rem
@@ -61,6 +60,7 @@
                     background: styles.$darkgreen
                     //color: styles.$darkblue
                     transition: all 0.3s ease-in-out
+                    cursor: pointer
 
             a 
                 color: styles.$darkgreen
@@ -75,7 +75,4 @@
             p 
                 color: styles.$gray
 
-            .loginGoogle
-                margin-bottom: 50px
-
-                
+            
