--- a/src/pages/reset/Reset.module.sass
+++ b/src/pages/reset/Reset.module.sass
@@ -1,11 +1,10 @@
 @use '../../styles/variables.sass' as styles
 
-.register
+.login
     display: flex
     justify-content: center
     align-items: center
     height: 80vh
-
     .container
         display: flex
         flex-direction: column
@@ -13,26 +12,27 @@
         align-items: center
         border: 2px solid styles.$darkgreen
         width: 400px
-        padding: 30px
         margin: auto 
         background: styles.$darkblue
         border-radius: 5px
+        padding-bottom: 50px
         @media screen and (max-width: 400px) 
             height: 100%
 
         h1
             color: styles.$orange
             font-size: 3rem
-            margin: 30px 0
+            margin-top: 50px
 
         form
-            width: 90%
+            width: 80%
             display: flex
             flex-direction: column
             justify-content: center
             align-items: center
             //background: styles.$darkblue
 
+            
             input
                 width: 100%
                 height: 40px
@@ -46,7 +46,6 @@
 
             button
                 margin-top: 10px
-                margin-bottom: 30px
                 background: styles.$orange
                 color: styles.$white
                 width: 100%
@@ -57,12 +56,26 @@
                 transition: all 0.3s ease-in-out
 
                 &:hover
-                    //border: 3px solid styles.$darkblue
+                    //border: 3px solid styles.$orange
                     background: styles.$darkgreen
-                    color: styles.$white
+                    //color: styles.$darkblue
                     transition: all 0.3s ease-in-out
                     cursor: pointer
 
-        .names
-            display: flex
-            gap: 10px
+            a 
+                color: styles.$darkgreen
+                //font-size: 1.4rem
+                align-self: start
+                transition: all 0.3s ease-in-out
+                &:hover
+                    color: styles.$orange
+                    transition: all 0.3s ease-in-out
+                    cursor: pointer
+
+.navigation
+    margin-top: 10px
+    width: 100%
+    display: flex
+    justify-content: space-between
+    background: #000
+            
