--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -43,12 +43,18 @@
     .loginNav
         display: flex
         justify-content: space-evenly
+        align-items: center
         @media screen and (max-width: 1024px) and (min-width: 721px)
             scale: 0.6
-            margin-right: -40px
         
         ul
-            margin-right: 20px
+            font-size: .9rem
+            li
+                list-style: none
+                margin-left: -20px
+
+.hiUser
+
             
 
 
@@ -56,7 +62,6 @@ ul
     display: flex
     gap: 30px
     width: 200px
-    margin-right: -50px
 
     @media screen and (max-width: 720px)
         display: none
@@ -75,7 +80,6 @@ ul
 
 .cartLink
     color: styles.$white
-    margin-right: 30px
     list-style: none
     font-size: 1.5rem
     transition: all 0.3s ease-in-out
@@ -99,6 +103,15 @@ ul
     color: styles.$white
     font-size: 2rem
     margin: 0 40px 0 20px
+    @media screen and (min-width: 720px)
+        display: none
+    &:hover
+        color: styles.$orange
+        cursor: pointer
+
+.hamburgercart
+    color: styles.$white
+    font-size: 2rem
     @media screen and (min-width: 720px)
         display: none
     &:hover
