--- a/src/pages/home/home.module.sass
+++ b/src/pages/home/home.module.sass
@@ -2,5 +2,54 @@
 
 .container
     display: flex
+    align-items: center
+    justify-content: center
+    height: 60vh
+    gap: 10px
+
+//-----
+
+
+.card
+    border: 2px solid styles.$darkgreen
+    border-radius: 10px
+    width: 200px
+    height: 200px
+    display: flex
     flex-direction: column
     align-items: center
+    justify-content: center
+    overflow: hidden
+
+.productImage
+    width: 110%
+    height: 100%
+    max-height: 130px
+    overflow: hidden
+    background: #000
+
+.title
+    color: styles.$darkblue
+
+.price
+    color: styles.$darkgreen
+
+
+
+.addToCart
+    width: 110%
+    height: 35px
+    border-radius: 5px
+    border: none
+    background: styles.$orange
+    color: styles.$darkblue
+    font-weight: bold
+    transition: all 0.3s ease-in-out
+    overflow: hidden  
+    &:hover
+        background: styles.$darkgreen
+        color: styles.$darkblue
+        transition: all 0.3s ease-in-out
+        cursor: pointer
+    &:active
+        color: styles.$orange
