setting the sendig of data to firebase storage and firestore db

--- a/src/pages/home/home.module.sass
+++ b/src/pages/home/home.module.sass
@@ -22,11 +22,11 @@
     overflow: hidden
 
 .productImage
-    width: 110%
-    height: 100%
-    max-height: 130px
+    height: 60%
+    width: 60%
+    max-width: 200px
+    max-heigh: 200px
     overflow: hidden
-    background: #000
 
 .title
     color: styles.$darkblue
