--- a/src/pages/home/home.module.sass
+++ b/src/pages/home/home.module.sass
@@ -11,7 +11,7 @@
 
 
 .card
-    border: 2px solid styles.$darkgreen
+    border: 2px solid styles.$orange
     border-radius: 10px
     width: 200px
     height: 200px
@@ -38,7 +38,7 @@
 
 .addToCart
     width: 110%
-    height: 35px
+    height: 22%
     border-radius: 5px
     border: none
     background: styles.$orange
