--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -28,11 +28,19 @@
         width: 200px
         max-height: 200px
         margin-right: 30px
+        margin-left: 30px
+        font-size: 1.8rem
+        text-decoration: none
+        color: styles.$white
         @media screen and (max-width: 400px)
             margin-right: 10px
+        
+        .e
+            color: styles.$white
+        .dollar
+            color: styles.$orange
 
-        img
-            margin-left: 20px
+        
 
     .nav
         margin-right: 100px
