--- a/src/pages/admin/Admin.module.sass
+++ b/src/pages/admin/Admin.module.sass
@@ -1,10 +1,68 @@
+@use '../../styles/variables.sass' as styles
+    
 .products
     display: flex
     justify-content: center
     align-items: center
     flex-direction: column
-form
+.insertProductsForm
     display: flex
     flex-direction: column
     justify-content: center
-    align-items: center
+    align-items: start
+    width: 50vw
+    max-width: 600px
+    gap: 10px
+    padding: 20px
+    border: 1px solid styles.$orange
+    background: styles.$darkblue
+    color: styles.$white
+    border-radius: 10px
+    
+
+    input
+        width: 100%
+        border-radius: 10px
+        padding-left: 5px
+        height: 30px
+        
+    textarea
+        width: 100%
+        height: 60px
+        border-radius: 10px
+    button
+        width: 100%
+        height: 30px
+        border-radius: 10px
+        background: styles.$orange
+        color: styles.$white
+        transition: all 0.3s ease-in-out
+        &:hover
+            background: styles.$darkgreen
+            transition: all 0.3s ease-in-out
+            cursor: pointer
+
+.product
+    border: 2px solid styles.$orange
+    width: 50vw
+    height: 20vh
+    display: flex
+    padding: 5px
+    margin: 10px 0
+
+    img
+        height: 100%
+        width: auto
+        align-self: start
+
+    div
+        margin: 0 10px
+        width: 100%
+
+    .buttons
+        justify-self: flex-end
+        justify-content: center
+        display: flex
+        flex-direction: column
+        max-width: 100px
+        gap: 10px
