--- a/src/pages/home/home.module.sass
+++ b/src/pages/home/home.module.sass
@@ -4,8 +4,10 @@
     display: flex
     align-items: center
     justify-content: center
-    height: 60vh
-    gap: 10px
+    height: 100%
+    gap: 50px
+    flex-wrap: wrap
+    padding: 100px
 
 //-----
 
@@ -13,39 +15,43 @@
 .card
     border: 2px solid styles.$orange
     border-radius: 10px
-    width: 200px
-    height: 200px
+    width: 300px
+    height: 300px
     display: flex
     flex-direction: column
     align-items: center
     justify-content: center
     overflow: hidden
+    padding-top: 10px
 
 .productImage
     height: 60%
-    width: 60%
-    max-width: 200px
+    width: auto
     max-heigh: 200px
     overflow: hidden
+    border-radius: 10px
 
 .title
     color: styles.$darkblue
 
 .price
     color: styles.$darkgreen
+    font-size: 1.4rem
 
 
 
 .addToCart
     width: 110%
-    height: 22%
+    height: 20%
     border-radius: 5px
     border: none
     background: styles.$orange
     color: styles.$darkblue
     font-weight: bold
+    font-size: 1.2rem
     transition: all 0.3s ease-in-out
     overflow: hidden  
+    margin-bottom: -20px
     &:hover
         background: styles.$darkgreen
         color: styles.$darkblue
