firestore reading daily limit problem solving. first steps

--- a/src/components/modal/Modal.module.sass
+++ b/src/components/modal/Modal.module.sass
@@ -4,7 +4,7 @@
   bottom:0
   right: 0
   left: 0
-  background-color: white
+  background-color: rgba(0, 0, 0, 0.7)
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
   padding: 30px
   border-radius: 5px
@@ -12,5 +12,17 @@
   display: flex
   align-items: center
   justify-content: center
+  
+.modalChild
+    background: white
+    height: 60vh
+    width: 40vw
+    border-radius: 10px
+    display: flex
+    align-items: center
+    justify-content: center
+
+    button
+        width:90%
 
 
